src/parser/grammar/test_samples/constructors/invalid/constructor_with_return_type.5th
// INVALID: Constructor with return type
class Person {
    Name: string;
    
    Person(name: string): void {
        this.Name = name;
    }
}

main(): int {
    return 0;
}
